samples/_failures_safe/1761322371_838630_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ba823d7.c:163: error: expected ‘;’, ‘,’ or ‘)’ at end of input
